fix zendesk overlap

--- a/src/scss/telegram_chat.scss
+++ b/src/scss/telegram_chat.scss
@@ -50,3 +50,11 @@
     }
   }
 }
+
+iframe#launcher {
+  @include breakpoint-down(xl) {
+    &.sticky {
+      bottom: 75px !important;
+    }
+  }
+}
